fix profile image width on narrow screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -432,3 +432,10 @@ body {
     max-width: 270px;
   }
 }
+
+@media (max-width: 375px) {
+  .about__image {
+    width: 100%;
+    height: 100%;
+  }
+}
